--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,1 +1,3 @@
-user.properties.file=C:\\Users\\MABENHAS\\AppData\\Roaming\\NetBeans\\18\\build.properties
+file.reference.acountIPC.jar=C:\\Users\\leoda\\OneDrive - UPV\\UPV\\SEGUNDO A\u00d1O\\SEGUNDO CUATRIMESTRE\\IPC\\Trabajo\\Ipc-project-main\\dist\\lib\\acountIPC.jar
+file.reference.sqlite-jdbc-3.41.2.1.jar=C:\\Users\\leoda\\OneDrive - UPV\\UPV\\SEGUNDO A\u00d1O\\SEGUNDO CUATRIMESTRE\\IPC\\Trabajo\\Ipc-project-main\\dist\\lib\\sqlite-jdbc-3.41.2.1.jar
+user.properties.file=C:\\Users\\leoda\\AppData\\Roaming\\NetBeans\\18\\build.properties
