--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,13 +36,28 @@ dist.jlink.output=${dist.jlink.dir}/project2
 endorsed.classpath=
 excludes=
 file.reference.acountIPC.jar=\\\\CORENTINE\\VDI\\ALUMNO\\MABENHAS\\Escritorio\\Project\\lib\\acountIPC.jar
+file.reference.javafx-swt.jar=C:\\Users\\leoda\\OneDrive - UPV\\UPV\\SEGUNDO A\u00d1O\\SEGUNDO CUATRIMESTRE\\IPC\\Trabajo\\Ipc-project-main\\dist\\lib\\javafx-swt.jar
+file.reference.javafx.base.jar=C:\\Users\\leoda\\OneDrive - UPV\\UPV\\SEGUNDO A\u00d1O\\SEGUNDO CUATRIMESTRE\\IPC\\Trabajo\\Ipc-project-main\\dist\\lib\\javafx.base.jar
+file.reference.javafx.controls.jar=C:\\Users\\leoda\\OneDrive - UPV\\UPV\\SEGUNDO A\u00d1O\\SEGUNDO CUATRIMESTRE\\IPC\\Trabajo\\Ipc-project-main\\dist\\lib\\javafx.controls.jar
+file.reference.javafx.fxml.jar=C:\\Users\\leoda\\OneDrive - UPV\\UPV\\SEGUNDO A\u00d1O\\SEGUNDO CUATRIMESTRE\\IPC\\Trabajo\\Ipc-project-main\\dist\\lib\\javafx.fxml.jar
+file.reference.javafx.graphics.jar=C:\\Users\\leoda\\OneDrive - UPV\\UPV\\SEGUNDO A\u00d1O\\SEGUNDO CUATRIMESTRE\\IPC\\Trabajo\\Ipc-project-main\\dist\\lib\\javafx.graphics.jar
+file.reference.javafx.media.jar=C:\\Users\\leoda\\OneDrive - UPV\\UPV\\SEGUNDO A\u00d1O\\SEGUNDO CUATRIMESTRE\\IPC\\Trabajo\\Ipc-project-main\\dist\\lib\\javafx.media.jar
+file.reference.javafx.swing.jar=C:\\Users\\leoda\\OneDrive - UPV\\UPV\\SEGUNDO A\u00d1O\\SEGUNDO CUATRIMESTRE\\IPC\\Trabajo\\Ipc-project-main\\dist\\lib\\javafx.swing.jar
+file.reference.javafx.web.jar=C:\\Users\\leoda\\OneDrive - UPV\\UPV\\SEGUNDO A\u00d1O\\SEGUNDO CUATRIMESTRE\\IPC\\Trabajo\\Ipc-project-main\\dist\\lib\\javafx.web.jar
 file.reference.sqlite-jdbc-3.41.2.1.jar=\\\\CORENTINE\\VDI\\ALUMNO\\MABENHAS\\Escritorio\\Project\\lib\\sqlite-jdbc-3.41.2.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.JAVAFX11.classpath}:\
     ${file.reference.acountIPC.jar}:\
-    ${file.reference.sqlite-jdbc-3.41.2.1.jar}
+    ${file.reference.sqlite-jdbc-3.41.2.1.jar}:\
+    ${file.reference.javafx-swt.jar}:\
+    ${file.reference.javafx.base.jar}:\
+    ${file.reference.javafx.controls.jar}:\
+    ${file.reference.javafx.fxml.jar}:\
+    ${file.reference.javafx.graphics.jar}:\
+    ${file.reference.javafx.media.jar}:\
+    ${file.reference.javafx.swing.jar}:\
+    ${file.reference.javafx.web.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
