--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,13 +36,19 @@ dist.jlink.output=${dist.jlink.dir}/project2
 endorsed.classpath=
 excludes=
 file.reference.acountIPC.jar=\\\\CORENTINE\\VDI\\ALUMNO\\MABENHAS\\Escritorio\\Project\\lib\\acountIPC.jar
+file.reference.acountIPC.jar-1=C:\\Users\\MABENHAS\\Downloads\\acountIPC.jar
+file.reference.acountIPC.jar-2=lib\\acountIPC.jar
 file.reference.sqlite-jdbc-3.41.2.1.jar=\\\\CORENTINE\\VDI\\ALUMNO\\MABENHAS\\Escritorio\\Project\\lib\\sqlite-jdbc-3.41.2.1.jar
+file.reference.sqlite-jdbc-3.41.2.1.jar-1=..\\..\\..\\..\\ALUMNO\\MABENHAS\\Escritorio\\project2\\lib\\sqlite-jdbc-3.41.2.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.JAVAFX11.classpath}:\
     ${file.reference.acountIPC.jar}:\
-    ${file.reference.sqlite-jdbc-3.41.2.1.jar}
+    ${file.reference.sqlite-jdbc-3.41.2.1.jar}:\
+    ${file.reference.acountIPC.jar-1}:\
+    ${file.reference.sqlite-jdbc-3.41.2.1.jar-1}:\
+    ${file.reference.acountIPC.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
