--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,11 @@
-file.reference.acountIPC.jar=C:\\Users\\leoda\\OneDrive - UPV\\UPV\\SEGUNDO A\u00d1O\\SEGUNDO CUATRIMESTRE\\IPC\\Trabajo\\Ipc-project-main\\dist\\lib\\acountIPC.jar
-file.reference.sqlite-jdbc-3.41.2.1.jar=C:\\Users\\leoda\\OneDrive - UPV\\UPV\\SEGUNDO A\u00d1O\\SEGUNDO CUATRIMESTRE\\IPC\\Trabajo\\Ipc-project-main\\dist\\lib\\sqlite-jdbc-3.41.2.1.jar
+file.reference.acountIPC.jar=C:\\Users\\leoda\\OneDrive\\Documentos\\GitHub\\Ipc-project\\lib\\acountIPC.jar
+file.reference.javafx-swt.jar=C:\\Users\\leoda\\OneDrive\\Documentos\\GitHub\\Ipc-project\\lib\\javafx-swt.jar
+file.reference.javafx.base.jar=C:\\Users\\leoda\\OneDrive\\Documentos\\GitHub\\Ipc-project\\lib\\javafx.base.jar
+file.reference.javafx.controls.jar=C:\\Users\\leoda\\OneDrive\\Documentos\\GitHub\\Ipc-project\\lib\\javafx.controls.jar
+file.reference.javafx.fxml.jar=C:\\Users\\leoda\\OneDrive\\Documentos\\GitHub\\Ipc-project\\lib\\javafx.fxml.jar
+file.reference.javafx.graphics.jar=C:\\Users\\leoda\\OneDrive\\Documentos\\GitHub\\Ipc-project\\lib\\javafx.graphics.jar
+file.reference.javafx.media.jar=C:\\Users\\leoda\\OneDrive\\Documentos\\GitHub\\Ipc-project\\lib\\javafx.media.jar
+file.reference.javafx.swing.jar=C:\\Users\\leoda\\OneDrive\\Documentos\\GitHub\\Ipc-project\\lib\\javafx.swing.jar
+file.reference.javafx.web.jar=C:\\Users\\leoda\\OneDrive\\Documentos\\GitHub\\Ipc-project\\lib\\javafx.web.jar
+file.reference.sqlite-jdbc-3.41.2.1.jar=C:\\Users\\leoda\\OneDrive\\Documentos\\GitHub\\Ipc-project\\lib\\sqlite-jdbc-3.41.2.1.jar
 user.properties.file=C:\\Users\\leoda\\AppData\\Roaming\\NetBeans\\18\\build.properties
