--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,15 +36,25 @@ dist.jlink.output=${dist.jlink.dir}/project2
 endorsed.classpath=
 excludes=
 file.reference.acountIPC.jar=\\\\CORENTINE\\VDI\\ALUMNO\\MABENHAS\\Escritorio\\Project\\lib\\acountIPC.jar
+file.reference.acountIPC.jar-1=lib\\acountIPC.jar
 file.reference.javafx-swt.jar=C:\\Users\\leoda\\OneDrive - UPV\\UPV\\SEGUNDO A\u00d1O\\SEGUNDO CUATRIMESTRE\\IPC\\Trabajo\\Ipc-project-main\\dist\\lib\\javafx-swt.jar
+file.reference.javafx-swt.jar-1=lib\\javafx-swt.jar
 file.reference.javafx.base.jar=C:\\Users\\leoda\\OneDrive - UPV\\UPV\\SEGUNDO A\u00d1O\\SEGUNDO CUATRIMESTRE\\IPC\\Trabajo\\Ipc-project-main\\dist\\lib\\javafx.base.jar
+file.reference.javafx.base.jar-1=lib\\javafx.base.jar
 file.reference.javafx.controls.jar=C:\\Users\\leoda\\OneDrive - UPV\\UPV\\SEGUNDO A\u00d1O\\SEGUNDO CUATRIMESTRE\\IPC\\Trabajo\\Ipc-project-main\\dist\\lib\\javafx.controls.jar
+file.reference.javafx.controls.jar-1=lib\\javafx.controls.jar
 file.reference.javafx.fxml.jar=C:\\Users\\leoda\\OneDrive - UPV\\UPV\\SEGUNDO A\u00d1O\\SEGUNDO CUATRIMESTRE\\IPC\\Trabajo\\Ipc-project-main\\dist\\lib\\javafx.fxml.jar
+file.reference.javafx.fxml.jar-1=lib\\javafx.fxml.jar
 file.reference.javafx.graphics.jar=C:\\Users\\leoda\\OneDrive - UPV\\UPV\\SEGUNDO A\u00d1O\\SEGUNDO CUATRIMESTRE\\IPC\\Trabajo\\Ipc-project-main\\dist\\lib\\javafx.graphics.jar
+file.reference.javafx.graphics.jar-1=lib\\javafx.graphics.jar
 file.reference.javafx.media.jar=C:\\Users\\leoda\\OneDrive - UPV\\UPV\\SEGUNDO A\u00d1O\\SEGUNDO CUATRIMESTRE\\IPC\\Trabajo\\Ipc-project-main\\dist\\lib\\javafx.media.jar
+file.reference.javafx.media.jar-1=lib\\javafx.media.jar
 file.reference.javafx.swing.jar=C:\\Users\\leoda\\OneDrive - UPV\\UPV\\SEGUNDO A\u00d1O\\SEGUNDO CUATRIMESTRE\\IPC\\Trabajo\\Ipc-project-main\\dist\\lib\\javafx.swing.jar
+file.reference.javafx.swing.jar-1=lib\\javafx.swing.jar
 file.reference.javafx.web.jar=C:\\Users\\leoda\\OneDrive - UPV\\UPV\\SEGUNDO A\u00d1O\\SEGUNDO CUATRIMESTRE\\IPC\\Trabajo\\Ipc-project-main\\dist\\lib\\javafx.web.jar
+file.reference.javafx.web.jar-1=lib\\javafx.web.jar
 file.reference.sqlite-jdbc-3.41.2.1.jar=\\\\CORENTINE\\VDI\\ALUMNO\\MABENHAS\\Escritorio\\Project\\lib\\sqlite-jdbc-3.41.2.1.jar
+file.reference.sqlite-jdbc-3.41.2.1.jar-1=lib\\sqlite-jdbc-3.41.2.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -57,7 +67,17 @@ javac.classpath=\
     ${file.reference.javafx.graphics.jar}:\
     ${file.reference.javafx.media.jar}:\
     ${file.reference.javafx.swing.jar}:\
-    ${file.reference.javafx.web.jar}
+    ${file.reference.javafx.web.jar}:\
+    ${file.reference.acountIPC.jar-1}:\
+    ${file.reference.javafx-swt.jar-1}:\
+    ${file.reference.javafx.base.jar-1}:\
+    ${file.reference.javafx.controls.jar-1}:\
+    ${file.reference.javafx.fxml.jar-1}:\
+    ${file.reference.javafx.graphics.jar-1}:\
+    ${file.reference.javafx.media.jar-1}:\
+    ${file.reference.javafx.swing.jar-1}:\
+    ${file.reference.javafx.web.jar-1}:\
+    ${file.reference.sqlite-jdbc-3.41.2.1.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
