--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,1 +1,4 @@
+file.reference.acountIPC.jar=\\\\CORENTINE\\VDI\\ALUMNO\\MABENHAS\\Escritorio\\project2\\lib\\acountIPC.jar
+file.reference.acountIPC.jar-1=\\\\CORENTINE\\VDI\\ALUMNO\\MABENHAS\\Escritorio\\project2\\lib\\acountIPC.jar
+file.reference.sqlite-jdbc-3.41.2.1.jar=\\\\CORENTINE\\VDI\\ALUMNO\\MABENHAS\\Escritorio\\project2\\lib\\sqlite-jdbc-3.41.2.1.jar
 user.properties.file=C:\\Users\\MABENHAS\\AppData\\Roaming\\NetBeans\\18\\build.properties
