Final IPC Project
Expense Account to follow the expenses you are making

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,7 @@
-file.reference.acountIPC.jar=C:\\Users\\leoda\\OneDrive\\Documentos\\GitHub\\Ipc-project\\lib\\acountIPC.jar
+compile.on.save=false
+do.depend=false
+do.jar=true
+do.jlink=false
 file.reference.javafx-swt.jar=C:\\Users\\leoda\\OneDrive\\Documentos\\GitHub\\Ipc-project\\lib\\javafx-swt.jar
 file.reference.javafx.base.jar=C:\\Users\\leoda\\OneDrive\\Documentos\\GitHub\\Ipc-project\\lib\\javafx.base.jar
 file.reference.javafx.controls.jar=C:\\Users\\leoda\\OneDrive\\Documentos\\GitHub\\Ipc-project\\lib\\javafx.controls.jar
@@ -8,4 +11,7 @@ file.reference.javafx.media.jar=C:\\Users\\leoda\\OneDrive\\Documentos\\GitHub\\
 file.reference.javafx.swing.jar=C:\\Users\\leoda\\OneDrive\\Documentos\\GitHub\\Ipc-project\\lib\\javafx.swing.jar
 file.reference.javafx.web.jar=C:\\Users\\leoda\\OneDrive\\Documentos\\GitHub\\Ipc-project\\lib\\javafx.web.jar
 file.reference.sqlite-jdbc-3.41.2.1.jar=C:\\Users\\leoda\\OneDrive\\Documentos\\GitHub\\Ipc-project\\lib\\sqlite-jdbc-3.41.2.1.jar
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
 user.properties.file=C:\\Users\\leoda\\AppData\\Roaming\\NetBeans\\18\\build.properties
